Responsive Work Has Begun - Added dropdown for navigation links - Tweaked navbar spcaing on mobile/tablet - More general layout fixes

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -97,6 +97,11 @@
          url("/fonts/Inter-Black.woff") format("woff");
   }
 
+.wide-screen-center {
+    max-width: 2000px;
+    margin: 0 auto;
+}
+
   @layer utilities {
     @variants responsive {
       .h-128 {
